Fix layout bugs

--- a/src/css/video.css
+++ b/src/css/video.css
@@ -1,8 +1,7 @@
 .video {
-  width: 900px;
-  height: 430px;
+  max-width: 900px;
   padding: 1rem .625rem;
-  margin: 1rem .625rem;
+  margin: 1rem auto;
   border: 1px #cfcfcf solid;
   border-radius: 3px;
   background-color: #f5f5f5;
@@ -10,7 +9,6 @@
   flex-direction: column;
   align-items: stretch;
 }
-
 
 .video.mini {
   height: 255px;
@@ -51,6 +49,7 @@
 /* Description */
 .video .video__description {
   font-size: 1rem;
+  overflow: auto;
 }
 
 .video.mini .video__description {
